         \//_____/                    \/


TODO: bandwidth optimization:
	test with no threads and no article preparation
	check if we can play on the SSL protocol paramaters

####################################################
###       Release: ngPost v2.2                   ###
###       date:    2020/01/17                    ###
####################################################

- fix / hack to use parpar (as external command)
- add keyword RAR_EXTRA in config file
- ask to overwrite existing nzb file
- refactor NgPost::compressFiles


####################################################
###       Release: ngPost v2.1                   ###
###       date:    2020/01/15                    ###
####################################################

- make the architecture thread safe to prevent duplicate articles and potential segfault
- fix completion check of the posting of all Articles of a NntpFile (and log duplicate Article even if there shouldn't be any)
- fix wong published date of the posted files in the nzb
- fix empty groups in nzb file
- use random poster (From) for each article when doing Article's obfuscation

- implement the possibility to compress and generate par2 from the selected files before posting
- rar has been chosen for the compression to allow the automatic decompression with all major readers
- allow rar and par2 name obfuscation
- incorporate par2 to the release
- allow the possibility to choose the par2 cmd and its args (for exemple to use Multipar on Windows)

- add select folder button
- special ListWidget for the list of files with ngPost signature and icons
- add the Save configuration feature
- add Donation button linked to Paypal
- add About button



####################################################
###       Release: ngPost v1.7                   ###
###       date:    2020/01/03                    ###
####################################################
