@@ -63,13 +63,16 @@ TMP_DIR = /tmp
 ## this is set for Linux environment, Windows users MUST change it
 RAR_PATH = /usr/bin/rar
 #RAR_PATH = C:\Program Files\WinRAR\Rar.exe
+#RAR_PATH = /usr/bin/7z
+#RAR_PATH = C:\Program Files\7-Zip\7z.exe
+
 
 ## RAR EXTRA options (the first 'a' and '-idp' will be added automatically)
 ## -hp will be added if you use a password with --gen_pass, --rar_pass or using the HMI
 ## -v42m will be added with --rar_size or using the HMI
 ## you could change the compression level, lock the archive, add redundancy...
-RAR_EXTRA = -ep1 -m0
 #RAR_EXTRA = -ep1 -m0 -k -rr5p
+#RAR_EXTRA = -mx0 -mhe=on   (for 7-zip)
 
 ## size in MB of the RAR volumes (0 by default meaning NO split)
 ## feel free to change the value or to comment the next line if you don't want to split the archive
@@ -88,9 +91,9 @@ PAR2_PCT = 8
 
 ## fixed parameters for the par2 (or alternative) command
 ## you could for exemple use Multipar on Windows
-#PAR2_ARGS = -s1M -r8%
-#PAR2_ARGS = c -l -m1024 -r8 -s768000
-#PAR2_ARGS = create /rr8 /lc40 /lr /rd2
+#PAR2_ARGS = -s1M -r8% -m1024M          (for parpar)
+#PAR2_ARGS = c -l -m1024 -r8 -s768000   (for par2cmdline)
+#PAR2_ARGS = create /rr8 /lc40 /lr /rd2 (for Multipar)
 
 
 ## length of the random generated archive's file name
