@@ -16,10 +16,17 @@ TODO: bandwidth optimization:
 ###       date:    2020/01/17                    ###
 ####################################################
 
+- release for Raspberry PI (Raspbian armhf)
+
+- support 7-zip compression
+
 - fix / hack to use parpar (as external command)
+
 - add keyword RAR_EXTRA in config file
+
 - ask to overwrite existing nzb file
 - refactor NgPost::compressFiles
+
 
 
 ####################################################
